# darwin

./: .gitignore  LICENSE  darwin.cabal  stack.yaml
src/: CircleImage.hs  Evolution.hs  FboPlay.hs  GLPolygonImage.hs  GlossIndividual.hs  ImageUtils.hs  Main.hs  PolygonImage.hs  SimulatedAnnealing.hs  Strategies.hs  Util.hs
