name:                darwin
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable darwin
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
                     , Rasterific
                     , random-fu
                     , vector
                     , parallel
                     , deepseq